# ThePantsProject

./: .env  .gitignore  Dockerfile  README.md  data.csv  db.sqlite3  docker-compose.yml  get_token.py  manage.py  pyproject.toml  utils.py
ThePantsProject/: asgi.py  settings.py  urls.py  wsgi.py
data/: data.sqlite3  db.sqlite3
djangoTemplate/: settings.py  urls.py
process/: Dockerfile  process.py
process/main/: views.py
process/process/: asgi.py  settings.py  urls.py  wsgi.py
process/templates/: index.html
server/: Dockerfile  app.py  models.py  requirements.txt  views.py
server/main/: urls.py  views.py
server/main/templates/: index.html
server/management/commands/: csv.py  rtree.py
server/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
server/templates/: index.html
static/css/: styles.css
static/scripts/: index.js
templates/: index.html  login.html  signup.html
