[tool.poetry]
name = "server"
version = "0.1.0"
description = "Django server for ThePantsProject"
authors = ["Luke and Dylan"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.5"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"