[tool.poetry]
name = "pantsproject"
version = "0.1.0"
description = ""
authors = ["Luke and Dylan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[
tool.poetry.scripts
]
server = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
